--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Install tools
+      - name: Install golangci-lint (compiled with same Go version)
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh \
-            | sh -s -- -b "$(go env GOPATH)"/bin v1.57.2
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.57.2
+          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
 
       - name: Format
         run: make fmt
