--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Install golangci-lint (compiled with same Go version)
+      - name: Install golangci-lint (Go 1.22‑compatible release)
         run: |
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.57.2
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.59.0
           echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
 
       - name: Format
