--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Install golangci-lint (Go 1.22‑compatible release)
-        run: |
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.59.0
-          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v1.59.0
 
       - name: Format
         run: make fmt
